--- a/angular.json
+++ b/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "angular-ecomm-shop"
+  "defaultProject": "angular-ecomm-shop",
+  "cli": {
+    "analytics": false
+  }
 }
